Fix padding values for layout spacing in responsive design

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,7 +4,7 @@
 }
 @media (min-width: 1535px) {
   .layoud-spacing{
-    padding-top: 151px;
+    padding-top: 141px;
   }
 }
 @media (max-width: 1535px) {
@@ -14,7 +14,7 @@
 }
 @media (max-width: 1362px) {
   .layoud-spacing{
-    padding-top: 167px;
+    padding-top: 130px;
   }
 }
 @media (max-width: 1279px) {
